--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
     "require": {
         "retailcrm/api-client-php": "~6.0",
         "symfony/http-client": "^7.0",
-        "nyholm/psr7": "^1.8"
+        "nyholm/psr7": "^1.8",
+        "vlucas/phpdotenv": "^5.6",
+        "monolog/monolog": "^3.5"
     },
     "config": {
         "allow-plugins": {
