--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,13 @@
         "vlucas/phpdotenv": "^5.6",
         "monolog/monolog": "^3.5"
     },
+    "autoload": {
+        "psr-4": {
+            "CRM_API\\": "Service/",
+            "CSV_Functions\\": "Service/",
+            "Custom_Logger\\": "Service/"
+        }
+    },
     "config": {
         "allow-plugins": {
             "php-http/discovery": true,
